fixed some contrast issues that wave was picking up.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -258,8 +258,8 @@ footer a{
 
 /* Button Variants */
 .btn-success {
-    background-color: #28a745;
-    border-color: #28a745;
+    background-color: #198754;
+    border-color: #198754;
     font-weight: 500;
 }
 
